--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<div class="container">
 				<div class="entete">
-					<a href="" ;>En Memoire de <br>Felix Houphouet Boigny</a>
+					<a href="" class="mem">En Memoire de <br>Felix Houphouet Boigny</a>
 					<a href="#Accueil">Accueil</a>
 					<a href="#Bibliographie">Bibliographie</a>
 					<a href="#Memoires">Memoires</a>
@@ -18,5 +18,13 @@
 				</div>
 			</div>
 	</header>
+	<!-- la section suivante apres l'entete -->
+	<h3>Il restera à jamais dans nos coeurs</h3>
+	<h1>FELIX HOUPHOUET BOIGNY</h1>
+	<div class="container">
+		<img src="images/fh1.jpg" alt="" class="im">
+		<h1>18 Octobre 1905 - 07 Décembre 1993</h1>
+	</div>
+	<hr>
 </body>
 </html>
