l'ajout de la section bibliographie

--- a/index.html
+++ b/index.html
@@ -26,5 +26,26 @@
 		<h1>18 Octobre 1905 - 07 Décembre 1993</h1>
 	</div>
 	<hr>
+	<br><br><br>
+		<!--la bibliographie -->
+		<div class="container" id="biblio">
+			<h1 id ="Bibliographie">La Bibliographie de FELIX HOUPHOUET BOIGNY</h1>
+			<p>Serait né le 18 octobre 1905 à N'Gokro, en Côte-d'Ivoire</p>
+			<p>Première élection à l'Assemblée nationale (1946)</p>
+			<p>Président de l'Assemblée nationale de Côte-d'Ivoire (24 mars 1953-30 novembre 1959)</p>
+			<p>Ministre délégué à la présidence du Conseil (France) (1e février 1956-13 juin 1957)</p>
+			<p>Ministre d'État dans différents gouvernements (France) (13 juin 1957-17 mai 1958, 1e juin 1958-20 mai 1959)</p>
+			<p>Ministre conseiller du gouvernement de Michel Debré (France) (23 juillet 1959-19 mai 1961)</p>
+			<p>Maire d'Abidjan (1956-1960)</p>
+			<p>Premier ministre de Côte-d'Ivoire (1e mai 1959-3 novembre 1960)</p>
+			<p>Ministre de l'Intérieur (Côte-d'Ivoire) (8 septembre 1959-3 janvier 1961)</p>
+			<p>Ministre des Affaires étrangères (Côte-d'Ivoire) (3 janvier 1961-10 septembre 1963)</p>
+			<p>Ministre de la Défense, ministre de l'Intérieur, ministre de l'Agriculture (Côte-d'Ivoire) (10 septembre 1963-21 janvier 1966)</p>
+			<p>Ministre de l'Économie et des Finances, ministre de la Défense, ministre de l'Agriculture (Côte-d'Ivoire) (21 janvier 1966-23 septembre 1968)</p>
+			<p>Ministre de l'Éducation nationale (Côte-d'Ivoire) (8 juin 1971-1e décembre 1971)</p>
+			<p>Président de la République de Côte-d'Ivoire (7 août 1960-7 décembre 1993)</p>
+			<p>Décédé le 7 décembre 1993 à Yamoussoukro, en Côte-d'Ivoire</p>
+		</div>
+		<hr>
 </body>
 </html>
