l'ajout de la section Memoire

--- a/index.html
+++ b/index.html
@@ -47,5 +47,11 @@
 			<p>Décédé le 7 décembre 1993 à Yamoussoukro, en Côte-d'Ivoire</p>
 		</div>
 		<hr>
+		<!-- La memoire -->
+		<div class="container ">
+			<h1 id="Memoires">En mémoire de FELIX HOUPHOUET BOIGNY</h1>
+			<img src="images/i20.jpg" alt="" class="im">
+			<h3>Il restera de toi ce que tu as semé Que tu as partagé aux mendiants du bonheur. Ce que tu as semé, en d’autres germera. Celui qui perd sa vie, un jour la trouvera</h3>
+		</div>
 </body>
 </html>
