l'ajout de la section Album

--- a/index.html
+++ b/index.html
@@ -53,5 +53,68 @@
 			<img src="images/i20.jpg" alt="" class="im">
 			<h3>Il restera de toi ce que tu as semé Que tu as partagé aux mendiants du bonheur. Ce que tu as semé, en d’autres germera. Celui qui perd sa vie, un jour la trouvera</h3>
 		</div>
+		<br><br><br>
+		<!-- l'album-->
+		<div class="container">
+			<div class="blocimages">
+				<h3>Sa Vie!!!</h3>
+				<h1 id="Album">L'Album de FELIX HOUPHOUET BOIGNY</h1>
+	              	<div class="images" >
+						<div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i1.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i2.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i3.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i4.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i5.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i6.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i7.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i10.jpg" alt="" />
+			                </div>
+			            </div>
+
+			            <div class="image"  >
+			                <div class="imag">
+			                    <img src="images/i11.jpg" alt="" />
+			                </div>
+			            </div>
+			        </div>
+			</div>
+		</div>
 </body>
 </html>
