l'ajout du footer

--- a/index.html
+++ b/index.html
@@ -116,5 +116,9 @@
 			        </div>
 			</div>
 		</div>
+		<!-- le footer-->
+		<div class="footer">
+  			<p>Le Président FELIX HOUPHOUET BOGNY</p>
+		</div>
 </body>
 </html>
