Modification du code

--- a/index.html
+++ b/index.html
@@ -7,118 +7,159 @@
 	<title>Hommage</title>
 </head>
 <body>
-	<header>
-		<div class="container">
-				<div class="entete">
-					<a href="" class="mem">En Memoire de <br>Felix Houphouet Boigny</a>
-					<a href="#Accueil">Accueil</a>
-					<a href="#Bibliographie">Bibliographie</a>
-					<a href="#Memoires">Memoires</a>
-					<a href="#Album">Album</a>
-				</div>
-			</div>
-	</header>
-	<!-- la section suivante apres l'entete -->
+
+	<!-- l'entete du site -->
+
+	<section class="container">
+		<header>
+			<nav class="entete">
+				<a href="" class="mem">En Memoire de <br>Felix Houphouet Boigny</a>
+				<a href="#Accueil">Accueil</a>
+				<a href="#Bibliographie">Bibliographie</a>
+				<a href="#Memoires">Memoires</a>
+				<a href="#Album">Album</a>
+			</nav>
+		</header>
+	</section>
+
+
+
+
+	<!-- la section presentation apres l'entete -->
+
 	<h3>Il restera à jamais dans nos coeurs</h3>
 	<h1>FELIX HOUPHOUET BOIGNY</h1>
-	<div class="container">
+	<section class="container">
 		<img src="images/fh1.jpg" alt="" class="im">
 		<h1>18 Octobre 1905 - 07 Décembre 1993</h1>
-	</div>
+	</section>
 	<hr>
 	<br><br><br>
-		<!--la bibliographie -->
-		<div class="container" id="biblio">
-			<h1 id ="Bibliographie">La Bibliographie de FELIX HOUPHOUET BOIGNY</h1>
-			<p>Serait né le 18 octobre 1905 à N'Gokro, en Côte-d'Ivoire</p>
-			<p>Première élection à l'Assemblée nationale (1946)</p>
-			<p>Président de l'Assemblée nationale de Côte-d'Ivoire (24 mars 1953-30 novembre 1959)</p>
-			<p>Ministre délégué à la présidence du Conseil (France) (1e février 1956-13 juin 1957)</p>
-			<p>Ministre d'État dans différents gouvernements (France) (13 juin 1957-17 mai 1958, 1e juin 1958-20 mai 1959)</p>
-			<p>Ministre conseiller du gouvernement de Michel Debré (France) (23 juillet 1959-19 mai 1961)</p>
-			<p>Maire d'Abidjan (1956-1960)</p>
-			<p>Premier ministre de Côte-d'Ivoire (1e mai 1959-3 novembre 1960)</p>
-			<p>Ministre de l'Intérieur (Côte-d'Ivoire) (8 septembre 1959-3 janvier 1961)</p>
-			<p>Ministre des Affaires étrangères (Côte-d'Ivoire) (3 janvier 1961-10 septembre 1963)</p>
-			<p>Ministre de la Défense, ministre de l'Intérieur, ministre de l'Agriculture (Côte-d'Ivoire) (10 septembre 1963-21 janvier 1966)</p>
-			<p>Ministre de l'Économie et des Finances, ministre de la Défense, ministre de l'Agriculture (Côte-d'Ivoire) (21 janvier 1966-23 septembre 1968)</p>
-			<p>Ministre de l'Éducation nationale (Côte-d'Ivoire) (8 juin 1971-1e décembre 1971)</p>
-			<p>Président de la République de Côte-d'Ivoire (7 août 1960-7 décembre 1993)</p>
-			<p>Décédé le 7 décembre 1993 à Yamoussoukro, en Côte-d'Ivoire</p>
-		</div>
-		<hr>
-		<!-- La memoire -->
-		<div class="container ">
-			<h1 id="Memoires">En mémoire de FELIX HOUPHOUET BOIGNY</h1>
-			<img src="images/i20.jpg" alt="" class="im">
-			<h3>Il restera de toi ce que tu as semé Que tu as partagé aux mendiants du bonheur. Ce que tu as semé, en d’autres germera. Celui qui perd sa vie, un jour la trouvera</h3>
-		</div>
-		<br><br><br>
-		<!-- l'album-->
-		<div class="container">
-			<div class="blocimages">
-				<h3>Sa Vie!!!</h3>
-				<h1 id="Album">L'Album de FELIX HOUPHOUET BOIGNY</h1>
-	              	<div class="images" >
-						<div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i1.jpg" alt="" />
-			                </div>
-			            </div>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i2.jpg" alt="" />
-			                </div>
-			            </div>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i3.jpg" alt="" />
-			                </div>
-			            </div>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i4.jpg" alt="" />
-			                </div>
-			            </div>
+	<!--la bibliographie -->
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i5.jpg" alt="" />
-			                </div>
-			            </div>
+	<section class="container" id="biblio">
+		<h1 id ="Bibliographie">La Bibliographie de FELIX HOUPHOUET BOIGNY</h1>
+		<article>
+				<p>Serait né le 18 octobre 1905 à N'Gokro, en Côte-d'Ivoire</p>
+				<p>Première élection à l'Assemblée nationale (1946)</p>
+				<p>Président de l'Assemblée nationale de Côte-d'Ivoire (24 mars 1953-30 novembre 1959)</p>
+				<p>Ministre délégué à la présidence du Conseil (France) (1e février 1956-13 juin 1957)</p>
+				<p>Ministre d'État dans différents gouvernements (France) (13 juin 1957-17 mai 1958, 1e juin 1958-20 mai 1959)</p>
+				<p>Ministre conseiller du gouvernement de Michel Debré (France) (23 juillet 1959-19 mai 1961)</p>
+				<p>Maire d'Abidjan (1956-1960)</p>
+				<p>Premier ministre de Côte-d'Ivoire (1e mai 1959-3 novembre 1960)</p>
+				<p>Ministre de l'Intérieur (Côte-d'Ivoire) (8 septembre 1959-3 janvier 1961)</p>
+				<p>Ministre des Affaires étrangères (Côte-d'Ivoire) (3 janvier 1961-10 septembre 1963)</p>
+				<p>Ministre de la Défense, ministre de l'Intérieur, ministre de l'Agriculture (Côte-d'Ivoire) (10 septembre 1963-21 janvier 1966)</p>
+				<p>Ministre de l'Économie et des Finances, ministre de la Défense, ministre de l'Agriculture (Côte-d'Ivoire) (21 janvier 1966-23 septembre 1968)</p>
+				<p>Ministre de l'Éducation nationale (Côte-d'Ivoire) (8 juin 1971-1e décembre 1971)</p>
+				<p>Président de la République de Côte-d'Ivoire (7 août 1960-7 décembre 1993)</p>
+				<p>Décédé le 7 décembre 1993 à Yamoussoukro, en Côte-d'Ivoire</p>
+		</article>
+	</section>
+	<hr>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i6.jpg" alt="" />
-			                </div>
-			            </div>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i7.jpg" alt="" />
-			                </div>
-			            </div>
+	<!-- la section memoire -->
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i10.jpg" alt="" />
-			                </div>
-			            </div>
 
-			            <div class="image"  >
-			                <div class="imag">
-			                    <img src="images/i11.jpg" alt="" />
-			                </div>
-			            </div>
-			        </div>
-			</div>
-		</div>
-		<!-- le footer-->
-		<div class="footer">
-  			<p>Le Président FELIX HOUPHOUET BOGNY</p>
-		</div>
+	<section class="container ">
+		<h1 id="Memoires">En mémoire de FELIX HOUPHOUET BOIGNY</h1>
+		<img src="images/i20.jpg" alt="" class="im">
+		<h3>Il restera de toi ce que tu as semé Que tu as partagé aux mendiants du bonheur. Ce que tu as semé, en d’autres germera. Celui qui perd sa vie, un jour la trouvera</h3>
+	</section>
+	<br><br><br>
+
+
+	<!-- la section album -->
+
+
+	<section class="container">
+		<section class="blocimages">
+			<h3>Sa Vie!!!</h3>
+			<h1 id="Album">L'Album de FELIX HOUPHOUET BOIGNY</h1>
+	        <section class="images" >
+				<section class="image"  >
+			        <section class="imag">
+			            <img src="images/i1.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i2.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i3.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i4.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i5.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i6.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i7.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i10.jpg" alt="" />
+			        </section>
+			    </section>
+
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i11.jpg" alt="" />
+			        </section>
+			    </section>
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i12.jpg" alt="" />
+			        </section>
+			    </section>
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i13.jpg" alt="" />
+			        </section>
+			    </section>
+			    <section class="image"  >
+			        <section class="imag">
+			            <img src="images/i14.jpg" alt="" />
+			        </section>
+			    </section>
+			</section>
+		</section>
+	</section>
+
+
+	<!-- le footer-->
+
+	<footer>
+  		<p>Le Président FELIX HOUPHOUET BOGNY</p>
+	</footer>
+
 </body>
 </html>
